Project is now in standard format.